// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a financial freedom breakdown snapshot 1`] = `
<div>
  <div
    class="mt-3 grid gap-3 md:grid-cols-[1.1fr_1fr]"
  >
    <div
      class="rounded-xl border border-slate-800 bg-slate-900/60 p-4"
    >
      <div
        class="flex items-center justify-between text-xs text-slate-400"
      >
        <span>
          Breakdown
        </span>
        <span>
          Goal: 110%
        </span>
      </div>
      <div
        class="mt-3 space-y-2 text-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-1 text-slate-300"
          >
            <span>
              Passive income
            </span>
            <span
              class="relative inline-flex"
            >
              <span>
                <button
                  aria-label="What counts as passive income?"
                  class="text-slate-500 hover:text-slate-200"
                  type="button"
                >
                  <svg
                    class="lucide lucide-info"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="font-semibold text-white"
          >
            $1,200
            /mo
          </div>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-1 text-slate-300"
          >
            <span>
              Expenses
            </span>
            <span
              class="relative inline-flex"
            >
              <span>
                <button
                  aria-label="What counts as expenses?"
                  class="text-slate-500 hover:text-slate-200"
                  type="button"
                >
                  <svg
                    class="lucide lucide-info"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="font-semibold text-white"
          >
            $1,000
            /mo
          </div>
        </div>
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Ratio
          </span>
          <span
            class="text-slate-200"
          >
            $1,200 / $1,000 = 120.0%
          </span>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-800 bg-slate-900/60 p-4"
    >
      <div
        class="text-xs text-slate-400"
      >
        Change since last month
      </div>
      <div
        class="mt-3 space-y-2 text-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-slate-300"
          >
            Passive
          </span>
          <span
            class="font-semibold text-emerald-300"
          >
            +$100
          </span>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-slate-300"
          >
            Expenses
          </span>
          <span
            class="font-semibold text-rose-300"
          >
            +$50
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a first-month breakdown snapshot 1`] = `
<div>
  <div
    class="mt-3 grid gap-3 md:grid-cols-[1.1fr_1fr]"
  >
    <div
      class="rounded-xl border border-slate-800 bg-slate-900/60 p-4"
    >
      <div
        class="flex items-center justify-between text-xs text-slate-400"
      >
        <span>
          Breakdown
        </span>
        <span>
          Goal: 110%
        </span>
      </div>
      <div
        class="mt-3 space-y-2 text-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-1 text-slate-300"
          >
            <span>
              Passive income
            </span>
            <span
              class="relative inline-flex"
            >
              <span>
                <button
                  aria-label="What counts as passive income?"
                  class="text-slate-500 hover:text-slate-200"
                  type="button"
                >
                  <svg
                    class="lucide lucide-info"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="font-semibold text-white"
          >
            $800
            /mo
          </div>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-1 text-slate-300"
          >
            <span>
              Expenses
            </span>
            <span
              class="relative inline-flex"
            >
              <span>
                <button
                  aria-label="What counts as expenses?"
                  class="text-slate-500 hover:text-slate-200"
                  type="button"
                >
                  <svg
                    class="lucide lucide-info"
                    fill="none"
                    height="14"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M12 16v-4"
                    />
                    <path
                      d="M12 8h.01"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="font-semibold text-white"
          >
            $950
            /mo
          </div>
        </div>
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Ratio
          </span>
          <span
            class="text-slate-200"
          >
            $800 / $950 = 84.2%
          </span>
        </div>
      </div>
    </div>
    <div
      class="rounded-xl border border-slate-800 bg-slate-900/60 p-4"
    >
      <div
        class="text-xs text-slate-400"
      >
        Change since last month
      </div>
      <div
        class="mt-3 space-y-2 text-sm"
      >
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-slate-300"
          >
            Passive
          </span>
          <span
            class="font-semibold text-emerald-300"
          >
            —
          </span>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <span
            class="text-slate-300"
          >
            Expenses
          </span>
          <span
            class="font-semibold text-emerald-300"
          >
            —
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
